--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://admin:XQiEL7efuIVv05iH@cluster0.ehtnebc.mongodb.net/test
+spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=wordappdatabase
